# diesel-sqlite-example

./: Cargo.toml  README.md  license
migrations/2020-09-21-212455_transaction/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
