[package]
name = "diesel-sqlite-example"
version = "0.1.0"
authors = ["Abbas Yazdanpanah <yazdanpanah.a@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
diesel_migrations = "1.4.0"
chrono = "0.4"